Ajout de sections

--- a/index.html
+++ b/index.html
@@ -38,7 +38,83 @@
             
             <section class="right-side-section" id="section-langages">
                 <h3 class="section-title">Langages</h3>
-                Hello World!
+
+                <div class="content-box">
+                    PHP
+                </div>
+
+                <div class="content-box">
+                    JavaScript
+                </div>
+
+                <div class="content-box">
+                    TypeScript
+                </div>
+
+                <div class="content-box">
+                    C
+                </div>
+
+                <div class="content-box">
+                    C++
+                </div>
+
+                <div class="content-box">
+                    Java
+                </div>
+
+                <div class="content-box">
+                    Kotlin
+                </div>
+
+                <div class="content-box">
+                    Python
+                </div>
+
+                <div class="content-box">
+                    Lua
+                </div>
+
+                <div class="content-box">
+                    HTML/CSS
+                </div>
+
+                <div class="content-box">
+                    SQL
+                </div>
+
+            </section>
+
+            <section class="right-side-section" id="section-langages">
+                <h3 class="section-title">Outils & Frameworks</h3>
+
+                <div class="content-box">
+                    MongoDB
+                </div>
+
+                <div class="content-box">
+                    Neo4J
+                </div>
+
+                <div class="content-box">
+                    Docker
+                </div>
+
+                <div class="content-box">
+                    MySQL
+                </div>
+
+                <div class="content-box">
+                    Prisma
+                </div>
+
+                <div class="content-box">
+                    AngularJS
+                </div>
+
+                <div class="content-box">
+                    VueJS
+                </div>
             </section>
 
         </div>
