--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Victor Vautrin</title>
     <link rel="stylesheet" href="global.css">
+    <script src="index.js" defer></script>
 </head>
 <body>
     <div id="left-info">
@@ -14,13 +15,10 @@
         </div>
 
         <div id="left-content-area">
-            <h3>Langues</h3>
-            <ul>
-                <li>Français (Natif)</li>
-                <li>Portugais BR (Natif)</li>
-                <li>Anglais (B2/C1)</li>
-            </ul>
-
+            <button id="nav-button-1" class="nav-button">À propos</button>
+            <button id="nav-button-2" class="nav-button">Projets</button>
+            <button id="nav-button-3" class="nav-button">Compétences</button>
+            <button id="nav-button-4" class="nav-button">Blog</button>
         </div>
 
         <div id="left-contact-area">
@@ -35,88 +33,6 @@
 
     <div id="right-info">
         <div id="right-main-container">
-            
-            <section class="right-side-section" id="section-langages">
-                <h3 class="section-title">Langages</h3>
-
-                <div class="content-box">
-                    PHP
-                </div>
-
-                <div class="content-box">
-                    JavaScript
-                </div>
-
-                <div class="content-box">
-                    TypeScript
-                </div>
-
-                <div class="content-box">
-                    C
-                </div>
-
-                <div class="content-box">
-                    C++
-                </div>
-
-                <div class="content-box">
-                    Java
-                </div>
-
-                <div class="content-box">
-                    Kotlin
-                </div>
-
-                <div class="content-box">
-                    Python
-                </div>
-
-                <div class="content-box">
-                    Lua
-                </div>
-
-                <div class="content-box">
-                    HTML/CSS
-                </div>
-
-                <div class="content-box">
-                    SQL
-                </div>
-
-            </section>
-
-            <section class="right-side-section" id="section-langages">
-                <h3 class="section-title">Outils & Frameworks</h3>
-
-                <div class="content-box">
-                    MongoDB
-                </div>
-
-                <div class="content-box">
-                    Neo4J
-                </div>
-
-                <div class="content-box">
-                    Docker
-                </div>
-
-                <div class="content-box">
-                    MySQL
-                </div>
-
-                <div class="content-box">
-                    Prisma
-                </div>
-
-                <div class="content-box">
-                    AngularJS
-                </div>
-
-                <div class="content-box">
-                    VueJS
-                </div>
-            </section>
-
         </div>
     </div>
 </body> 
