--- a/content/a-propos.html
+++ b/content/a-propos.html
@@ -2,6 +2,7 @@
 <p>Je m'appelle Victor VAUTRIN, et je suis Développeur Informatique et étudiant à l'IUT de l'Université Lyon 1.</p>
 <p>Au cours de mon apprentissage, j'ai été formé aux technologies du web telles que...</p>
 <ul>
+    <li>- HTML/CSS</li>
     <li>- Javascript/TypeScript</li>
     <li>- PHP</li>
 
