--- a/index.html
+++ b/index.html
@@ -5,34 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Victor Vautrin</title>
     <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="generic.css">
     <script src="index.js" defer></script>
 </head>
 <body>
-    <div id="left-info">
-        <div id="left-title-area">
-            <h1>Victor VAUTRIN</h1>
-            <h2>Développeur Informatique</h2>
+
+<!-- 
+
+- Une partie "header" avec mon nom, description, etc...    
+- Une partie "Projets". Des cartes et quand tu clique ça ouvre une modal avec les détails du projets
+- Une partie "compétences" avec la liste des langages et technos utilisées
+- Une partie "Contact" avec mon mail/linkedin, etc...
+
+-->
+
+    <div id="main-app">
+
+        <!-- HEADER HEADER HEADER HEADER HEADER HEADER HEADER -->
+        <!-- HEADER HEADER HEADER HEADER HEADER HEADER HEADER -->
+        <div id="app-header">
+
+            <div id="app-header-content">
+                <div id="header-content-left">
+                    <h1 id="header-name-title">Victor Vautrin</h1>
+                    <h2 id="header-subtitle">Étudiant & Développeur Informatique</h2>
+                </div>
+    
+                <div id="header-content-right">
+                    <p id="header-description">Étudiant à l'IUT Lyon 1 en Informatique, je suis passioné par ce domaine. Principalement formé aux technologies du Web, je m'intéresse au C/C++ à mes heures perdues.</p>
+                </div>
+            </div>
         </div>
 
-        <div id="left-content-area">
-            <button id="nav-button-1" class="nav-button">À propos</button>
-            <button id="nav-button-2" class="nav-button">Projets</button>
-            <button id="nav-button-3" class="nav-button">Compétences</button>
-            <button id="nav-button-4" class="nav-button">Blog</button>
+        <span class="spikes"></span>
+
+        <!-- PROJETS PROJETS PROJETS PROJETS PROJETS PROJETS -->
+
+        <div id="app-projets">
+            <br>
+            <br>
+            <p>Hello World</p>
         </div>
 
-        <div id="left-contact-area">
-            <h3>Me Contacter</h3>
-            <address>
-                <p><a target="_blank" href="mailto:vautrinvic@gmail.com">vautrinvic@gmail.com</a></p>
-                <p>Mon <a target="_blank" href="https://www.linkedin.com/in/victor-vautrin-b757b0222/">LinkedIn</a></p>
-            </address>
-        </div>
-    </div>
 
-    <div id="right-info">
-        <div id="right-main-container">
-        </div>
     </div>
 </body> 
 </html>
