Ajout page projets

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
 
 -->
 
+<div id="project-details-modal">
+    <div id="modal-close">X</div>
+    <div id="project-details-modal-content">
+    </div>
+</div>
+
     <div id="main-app">
 
         <!-- HEADER HEADER HEADER HEADER HEADER HEADER HEADER -->
@@ -33,18 +39,44 @@
     
                 <div id="header-content-right">
                     <p id="header-description">Étudiant à l'IUT Lyon 1 en Informatique, je suis passioné par ce domaine. Principalement formé aux technologies du Web, je m'intéresse au C/C++ à mes heures perdues.</p>
+                    <p>Je suis actuellement à la recherche d'un stage en entreprise.</p>
+                    <!-- <img class="img-container" src="https://cdn-mii.accounts.nintendo.com/2.0.0/mii_images/00b3a66ea5a17399/bc8b54803905f84834d8f643d5a466a65183d36e.png?width=128" alt=""> -->
                 </div>
             </div>
         </div>
 
-        <span class="spikes"></span>
+        <!-- <span class="spikes"></span> -->
 
         <!-- PROJETS PROJETS PROJETS PROJETS PROJETS PROJETS -->
 
         <div id="app-projets">
-            <br>
-            <br>
-            <p>Hello World</p>
+            <h1 id="projets-title">Projets</h1>
+            <p>Voici une liste non exhaustive des projets auxquels j'ai participé</p>
+            <p>Certains de ces projets sont uniquement disponibles sur des dépots Gitlab necéssitant un compte universitaire</p>
+
+            <div id="project-cards-container">
+
+                <div class="project-card">
+                    <h3 class="project-card-title">ERP/PGI de Gestion d'école</h3>
+                    <button id="projectId-1" class="project-card-button">Voir Plus</button>
+                </div>
+
+                <div class="project-card">
+                    <h3 class="project-card-title">DEFAULT_TITLE</h3>
+                    <button id="projectId-2" class="project-card-button">Voir Plus</button>
+                </div>
+
+                <div class="project-card">
+                    <h3 class="project-card-title">DEFAULT_TITLE</h3>
+                    <button id="projectId-3" class="project-card-button">Voir Plus</button>
+                </div>
+
+                <div class="project-card">
+                    <h3 class="project-card-title">DEFAULT_TITLE</h3>
+                    <button id="projectId-4" class="project-card-button">Voir Plus</button>
+                </div>
+
+            </div>
         </div>
 
 
