--- a/index.html
+++ b/index.html
@@ -1,38 +1,33 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Victor Vautrin</title>
-    <link rel="stylesheet" href="global.css">
-    <script src="index.js" defer></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Victor VAUTRIN</title>
+  <script type="module" src="main.js" defer></script>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div id="left-info">
-        <div id="left-title-area">
-            <h1>Victor VAUTRIN</h1>
-            <h2>Développeur Informatique</h2>
-        </div>
+<body class="bg-theme-dark">
 
-        <div id="left-content-area">
-            <button id="nav-button-1" class="nav-button">À propos</button>
-            <button id="nav-button-2" class="nav-button">Projets</button>
-            <button id="nav-button-3" class="nav-button">Compétences</button>
-            <button id="nav-button-4" class="nav-button">Blog</button>
-        </div>
+  <!-- BACKGROUND  -->
+  <pre id="internal-background" class="bg-theme-dark"></pre>
 
-        <div id="left-contact-area">
-            <h3>Me Contacter</h3>
-            <address>
-                <p><a target="_blank" href="mailto:vautrinvic@gmail.com">vautrinvic@gmail.com</a></p>
-                <p>Mon <a target="_blank" href="https://www.linkedin.com/in/victor-vautrin-b757b0222/">LinkedIn</a></p>
-            </address>
-        </div>
-    </div>
+  <!-- CONTENT -->
+  <div id="page-content">
+<!--==================================================================================================-->
 
-    <div id="right-info">
-        <div id="right-main-container">
-        </div>
-    </div>
-</body> 
+<div class="base-container top-outset blue-outline margin-l" id="content-titleName">
+  <h1>Victor VAUTRIN</h1>
+  <p>Développeur Informatique, Étudiant @ EPITECH Lyon</p>
+</div>
+
+<div class="skill-list base-container top-outset blue-outline margin-l">
+  <h2>Compétences</h2>
+</div>
+
+
+<!--==================================================================================================-->
+  </div>
+
+</body>
 </html>
