background wave regen + first content block

--- a/index.html
+++ b/index.html
@@ -14,19 +14,29 @@
 
   <!-- CONTENT -->
   <div id="page-content">
+  <div id="page-content-grid">
 <!--==================================================================================================-->
 
-<div class="base-container top-outset blue-outline margin-l" id="content-titleName">
+    <div id="contentBlock-aboutMe" class="base-container top-outset blue-outline margin-l">
+      <h2>À propos de moi..</h2>
+      <p>
+        Je m'appelle <span class="rainbow_text_animated">Victor Vautrin</span> Je suis développeur informatique et j'étudie @ Epitech Lyon
+      </p>
+      <p>Voici quelques liens rapides:</p>
+      <a class="base-container clickable white-outline margin-s">Github</a>
+      <a class="base-container clickable white-outline margin-s">Yes</a>
+    </div>
+
+
+
+<!-- <div class="base-container top-outset blue-outline margin-l" id="content-titleName">
   <h1>Victor VAUTRIN</h1>
   <p>Développeur Informatique, Étudiant @ EPITECH Lyon</p>
-</div>
-
-<div class="skill-list base-container top-outset blue-outline margin-l">
-  <h2>Compétences</h2>
-</div>
+</div> -->
 
 
 <!--==================================================================================================-->
+  </div>
   </div>
 
 </body>
