--- a/index.html
+++ b/index.html
@@ -17,16 +17,109 @@
   <div id="page-content-grid">
 <!--==================================================================================================-->
 
-    <div id="contentBlock-aboutMe" class="base-container top-outset blue-outline margin-l">
-      <h2>À propos de moi..</h2>
+    <!-- INTRODUCTION INTRODUCTION INTRODUCTION INTRODUCTION INTRODUCTION -->
+    <div style="
+      grid-column: span 3 / span 3;" 
+    id="contentBlock-aboutMe" class="base-container backdrop top-outset blue-outline margin-l"
+    >
+      <h2>Salut la team</h2>
       <p>
-        Je m'appelle <span class="rainbow_text_animated">Victor Vautrin</span> Je suis développeur informatique et j'étudie @ Epitech Lyon
+        Je m'appelle <span class="rainbow_text_animated">Victor Vautrin</span> et je code jsp frere :(
       </p>
-      <p>Voici quelques liens rapides:</p>
-      <a class="base-container clickable white-outline margin-s">Github</a>
-      <a class="base-container clickable white-outline margin-s">Yes</a>
+
+      <div style="
+        margin-top: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+      ">
+        <a class="base-container buttonLink clickable white-outline margin-s" href="mailto:vautrinvic@gmail.com">Email</a>
+        <a class="base-container buttonLink clickable white-outline margin-s" href="https://www.linkedin.com/in/victor-vautrin-b757b0222/">LinkedIn</a>
+        <a class="base-container buttonLink clickable white-outline margin-s">Yes</a>
+      </div>
     </div>
 
+    <!-- SATA ANDAGI SATA ANDAGI SATA ANDAGI SATA ANDAGI SATA ANDAGI -->
+
+    <div style="
+      grid-column: span 2 / span 2;
+      grid-row: span 2 / span 2;
+      grid-column-start: 4;
+
+      width:100%; height:100%; display:flex; justify-content:center; align-items:center;
+    "
+    class="base-container top-outset blue-outline margin-l backdrop"
+    >
+    <div
+    class="rainbow_text_animated"
+      id="osakaAscii"
+    >                                                               
+                                   π≈÷-++++++++++++++++-=√                                          
+                              √×++++++++++++++++++++++++++++++=                                     
+                           +++++++++++++++++++++++++++++++++++++++÷                                 
+                        +++++++++++++++++++++++++++++++++++++++++++++∞                              
+                     √+≈ =+++  ++++++==+++≠++++++++++++++++++++++++++-++                            
+                   √+≠            √         +≠    √√ππ+π  √π √÷         ++                          
+                  +÷  ≠     ÷≠ ÷++=×=++ π√++-+- ∞≈+++≈       -≈   ∞++= ++++×                        
+                ∞+ ≠+++++++++++++++++++++++÷ ×+++++++++√ +++++++× ×++++++++++                       
+               -+++++++++++++++++++++++++++   ++++++++++++++++++++++++++++++++√                     
+              ++++++++++++++++++++++++++++    ×++++++√+++++++++++++++++++++++++                     
+             +++++++++++++++++++++×++++++√     ++++++π≠+++++++++++++++++++++++++                    
+            ∞+++++++++++++++++++++ +++++≠       ++++++ ∞+++++++++++++++++++++++++                   
+            +++++++++++++++≠+++++  +++++        √+++++  π++++++√+++++++++++++++++∞                  
+           ≠+++++++++++++++√+++++++++++          ∞++++×÷÷++++++√≈+++++++++++++++++                  
+           +++++++++++++++≈ ++++   +++-           =+++=    +++++++++++++++++++++++∞                 
+          √++++++++++++++≈  +++    +++              +++     ++++  +++++++++++++++++                 
+          =+++++++++-++++   +++++++++∞               =+÷π∞√  -++   ++++++++++++++++                 
+          +++++++++÷≠+++ ≈+++++++++++                +++++++++++√  √+++++++++++++++                 
+          +++++++++≈ ++++≈π+++++++++≠                ≈++++++++++++≠ +++++++++++++++                 
+          +++++++++π +++  ×++++++++++                ++++++++++++ =+√++=+++++++++++                 
+         ∞+++++++++  ÷×   +++++++++++                ++++++++++++   +++∞+++++++++++√                
+         =+++++++++ ∞+    +++++++++++√               ++++++++++++    +  +++++++++++√                
+         -+++++++++ +=    +++++++++++π               ++++++++++++    +√ +++++++++++≠                
+         ++++++++++ ==    +++++++++++                ++++++++++++   ≈+  +++++++++++≠                
+         ++++++++++  +    -≈  ÷+++++×                ≠+   +++++++   +÷  +++++++++++=                
+         +++++++++-          π++++++                  =   ++++++    ∞   +++++++++++≠                
+         +++++++++-         ÷+++++=                    ++++++++π        +++++++++++≈                
+         +++++++++-                                      π√∞π          π+++++++++++∞                
+         +++++++++×                                                    ≠+++++++++++π                
+         +++++++++×                                                    ×+++++++++++                 
+         ++++++++++                                                    ++++++++++++                 
+         +++++++++++                                                  =++++++++++++                 
+         ++++++++++++                     √∞√∞≈≈π                    ++++++++++++++                 
+         ++++++++++++++                   =√   ≈×                  -++++++++++++++÷                 
+         ++++++++++++++++=                 ≠×≈×+                √+++++++++++++++++√                 
+         ++++++++++++++++++++≠                               √++++++++++++++++++++                  
+         +++++++++++++++++++++++++÷π                     ≠++++++++++++++++++++++++                  
+         ++++++++++++++++++++++++++++++++++++×≠≠≠≠×++++++++++++++++++++++++++++++÷                  
+         =++++++++++++++++++++++++++++++++++π   √++++++++++++++++++++++++++++++++π                  
+         π++++++++++++++++++++++++++++++++++    √++++++++++++++++++++++++++++++++                   
+          +++++++++++++++++++++++++++++++π +    ∞+  √×++++++++++++++++++++++++++≠                   
+          -+++++++++++++++++++++++++++++   ++++++√  ≈÷÷+++++++++++++++++++++++++                    
+           ++++++++++++++++++++++++++++-∞- √-  ××≈×-++∞ ≠++++++++++++++++++++++≈                    
+           =++++++++++++++-++++++++++π√√--ππ-÷-+÷++-  √ π++++++++++++++++++++++                     
+            +++++++ ++++++√++++++++++≈+    π=++≠     √+÷≈+++++++++++++++++++++                      
+             ++++++ √+++++≠ ++++++++=≈+     ≈ -       +√π++++++++++++++++++++                       
+              +++++  ≠+++++  +++++++π=+     ∞+≈       +π ++++++-≈+++++++++++                        
+               ++++π  ≈++++   ++++++ ××     ≠≠∞       +√ +++++- ++++π++++++                         
+                ÷++π   √+++÷   ×+++∞ +≈     ×√≈       +∞ ∞+++=  +++π +++++                          
+                  ∞      -++    √++  +      =π≠       +∞  ++√  ≠++  ∞+++√                           
+                                 ×× ∞+                +∞  ×=   ==   ×+×                                                       </div>
+    </div>
+
+
+    <div
+      style="
+        grid-column: span 3 / span 3;
+        grid-row: span 2 / span 2;
+        grid-row-start: 2;
+        max-width: 100%;
+      "
+      class="base-container backdrop top-outset blue-outline margin-l"
+    >
+      <h2>Projets</h2>
+    </div>
 
 
 <!-- <div class="base-container top-outset blue-outline margin-l" id="content-titleName">
