--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 
     <!-- INTRODUCTION INTRODUCTION INTRODUCTION INTRODUCTION INTRODUCTION -->
     <div style="
-      grid-column: span 3 / span 3;" 
-    id="contentBlock-aboutMe" class="base-container backdrop top-outset blue-outline margin-l"
+      grid-column: span 3 / span 3;
+      max-width: 100%;" 
+    id="content-titleName" class="base-container backdrop top-outset blue-outline margin-l"
     >
       <h2>Salut la team</h2>
       <p>
@@ -52,7 +53,7 @@
     class="base-container top-outset blue-outline margin-l backdrop"
     >
     <div
-    class="rainbow_text_animated"
+    class="BnW_text_animated"
       id="osakaAscii"
     >                                                               
                                    π≈÷-++++++++++++++++-=√                                          
@@ -119,8 +120,9 @@
       class="base-container backdrop top-outset blue-outline margin-l"
     >
       <h2>Projets</h2>
-    </div>
 
+      
+    </div>
 
 <!-- <div class="base-container top-outset blue-outline margin-l" id="content-titleName">
   <h1>Victor VAUTRIN</h1>
