--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
     </pre> 
 
     <div id="page-content">
-        <h1>Victor Vautrin</h1>
-        <h2>Étudiant & Développeur Informatique</h2>
+        <center>
+            <div class="hero">
+                <h1>Victor Vautrin</h1>
+                <h2>Étudiant & Développeur Informatique</h2>
+            </div>
+        </center>
 
         <section class="genericContainer">
             <h3 class="sectionTitle">C:\A_Propos</h3>
@@ -132,6 +136,16 @@
                 <div class="experienceTitle">IUT Lyon 1, Villeurbanne</div>
                 <div class="experienceDate">2022-2025</div>
                 <p>BUT Informatique, avec une spécialisation en réalisation d'applications</p>
+                <p>Mélange de cours théoriques et de cours pratiques</p>
+                <p>Web, logiciel, bas-niveau (C & Assembleur ARM), base de données, réseau, multimédia, qualité de code, communication, etc...</p>
+            </div>
+
+            <div class="experienceItem">
+                <div class="experienceTitle">Lycée Lama-Prévot, Rémire-Montjoly <i>(Guyane Française)</i></div>
+                <div class="experienceDate">2020-2022</div>
+                <p>BAC Général mention Très Bien</p>
+                <p>Spécialités: Sciences Informatique, Cinéma-Audiovisuel, Littérature Anglaise</p>
+                <p>Apprentissage de l'algorithmique avec python, fondamenteux de l'informatique, SQL, etc...</p>
             </div>
 
         </section>
